# neural-network-digit-classifier

./: .hgignore  CMakeLists.txt  README.md
python/: plot.py  splitdata.py
src/: FileIO.cpp  FileIO.h  NeuralNet.cpp  NeuralNet.h  Trainer.h  UnitTest.cpp  UnitTest.h  Utility.h  main.cpp
